@@ -76,7 +76,7 @@ class XunitParserTest extends AbstractParserTest {
         var children = node.getChildren();
         assertThat(children).hasSize(1).first().isInstanceOf(PackageNode.class);
 
-        return (PackageNode) children.get(0);
+        return (PackageNode) children.getFirst();
     }
 
     private ClassNode getFirstClass(final Node node) {
@@ -85,7 +85,7 @@ class XunitParserTest extends AbstractParserTest {
         var children = packageNode.getChildren();
         assertThat(children).isNotEmpty().first().isInstanceOf(ClassNode.class);
 
-        return (ClassNode) children.get(0);
+        return (ClassNode) children.getFirst();
     }
 
     private TestCase getFirstTest(final Node node) {
